# PoissonRecon

./: .gitignore  .travis.yml  AdaptiveSolvers.sln  AdaptiveTreeVisualization.vcxproj  CMakeLists.txt  ChunkPLY.vcxproj  EDTInHeat.vcxproj  ImageStitching.vcxproj  JPEG.vcxproj  Makefile  Makefile.macos  PNG.vcxproj  PointInterpolant.vcxproj  PointsToDisks.vcxproj  PoissonRecon.pro  PoissonRecon.sln  PoissonRecon.vcxproj  PoissonRecon.vcxproj.filters  PoissonReconClient.vcxproj  PoissonReconServer.vcxproj  README.md  Reconstruction.example.vcxproj  SSDRecon.vcxproj  ScaleNormals.vcxproj  SurfaceTrimmer.vcxproj  ZLIB.vcxproj  initcmake.txt  test.bat
JPEG/: Makefile  jcapistd.cpp  jchuff.cpp  jconfig.h  jcphuff.cpp  jdapimin.cpp  jdapistd.cpp  jdatadst.cpp  jdatasrc.cpp  jmorecfg.h
PNG/: Makefile  PNG.vcxproj  PNG.vcxproj.filters  png.c  png.h  pngerror.c  pngget.c  pngmem.c  pngpread.c  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtest.c  pngtrans.c  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c
Python/: ReadMe.md  pypoissonrecon.pyx  setup.py
Src/: AdaptiveTreeVisualization.cpp  Allocator.h  Array.h  Array.inl  BMPStream.inl  BSplineData.h  BSplineData.inl  BlockedVector.h  ChunkPLY.cpp  CmdLineParser.cpp  CmdLineParser.h  CmdLineParser.inl  CoredMesh.h  CoredMesh.inl  DataStream.h  DataStream.imp.h  DataStream.imp.inl  DataStream.inl  EDTInHeat.cpp  Extrapolator.h  FEMTree.Evaluation.inl  FEMTree.Initialize.inl  FEMTree.IsoSurface.specialized.inl  FEMTree.LevelSet.2D.inl  FEMTree.LevelSet.3D.inl  FEMTree.LevelSet.inl  FEMTree.SortedTreeNodes.inl  FEMTree.System.inl  FEMTree.WeightedSamples.inl  FEMTree.h  FEMTree.inl  Geometry.h  Geometry.inl  Image.h  ImageStitching.cpp  InterpolateColors.V1.cpp  InterpolateColors.cpp  JPEG.h  JPEG.inl  LinearSolvers.h  (+85 more)
Src/point_source/: AsciiPointSource.h  AsciiPointSource.inl  BinaryPointSource.h  BinaryPointSource.inl  MemoryPointSource.h  PlyPointSource.h  PlyPointSource.inl  PointSource.h  TransformedPointSource.h
Src_CC_wrap/: PointData.cpp  PointData.h  PoissonReconLib.cpp  PoissonReconLib.h
ZLIB/: Makefile  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
apps/: CMakeLists.txt
apps/AdaptiveTreeVisualization/: CMakeLists.txt
apps/AdaptiveTreeVisualization/src/: AdaptiveTreeVisualization.cpp
apps/ChunkPLY/: CMakeLists.txt
apps/ChunkPLY/src/: ChunkPLY.cpp
apps/EDTInHeat/: CMakeLists.txt
apps/EDTInHeat/src/: EDTInHeat.cpp
apps/ImageStitching/: CMakeLists.txt
apps/ImageStitching/src/: ImageStitching.cpp
apps/PointInterpolant/: CMakeLists.txt
apps/PointInterpolant/src/: PointInterpolant.cpp
apps/PoissonRecon/: CMakeLists.txt
apps/PoissonRecon/src/: PoissonRecon.cpp  PoissonReconApp.cpp  config.xml
apps/SSDRecon/: CMakeLists.txt
apps/SSDRecon/src/: SSDRecon.cpp
apps/SurfaceTrimmer/: CMakeLists.txt
apps/SurfaceTrimmer/src/: SurfaceTrimmer.cpp  SurfaceTrimmerApp.cpp  config.xml
apps/VoxelCompare/: CMakeLists.txt
apps/VoxelCompare/src/: VoxelCompare.cpp
modules/: CMakeLists.txt
modules/PoissonRecon/: CMakeLists.txt
modules/PoissonRecon/include/Mesh/PoissonRecon/: Array.h  BMPStream.inl  BSplineData.h  BSplineData.inl  BlockedVector.h  CmdLineParser.h  CmdLineParser.inl  FEMTree.Initialize.inl  FEMTree.IsoSurface.specialized.inl  FEMTree.SortedTreeNodes.inl  FEMTree.System.inl  FEMTree.WeightedSamples.inl  FEMTree.h  FEMTree.inl  FunctionData.h  Geometry.h  Geometry.inl  Image.h  JPEG.h  JPEG.inl  LinearSolvers.h  MAT.h  MarchingCubes.h  MultiGridOctreeData.h  MyMiscellany.h  PNG.h  PNG.inl  PPolynomial.h  PPolynomial.inl  Ply.h  PlyFile.h  PlyFile.inl  PointStream.h  PointStream.inl  PointStreamData.h  PoissonRecon.h  Polynomial.h  Polynomial.inl  RegularTree.h  RegularTree.inl  (+8 more)
modules/PoissonRecon/src/: CmdLineParser.cpp  Factor.cpp  Geometry.cpp  MarchingCubes.cpp  PlyFile.cpp  PoissonRecon.cpp  SurfaceTrimming.cpp
scripts/ubuntu/: README.md  archive.sh  build.sh  clean.sh  common.sh  configure.sh  install.sh
scripts/windows/: README.md  archive.ps1  build.ps1  clean.ps1  common.ps1  configure.ps1  install.ps1
